<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Apams</string>
    <string name="title_account">Account</string>
    <string name="title_addNew">Add New Asset</string>
    <string name="title_Map">Map</string>
    <string name="title_scan">Scan Barcode</string>
    <string name="acc_user">Username</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="Item_name">Item Name</string>
    <string name="addCID">User CID</string>
    <string name="addRoom">Item Room Number</string>
    <string name="addType">Type of Item</string>
    <string name="addPic">Picture of Item</string>
    <string name="addNew_progress_signing_in">Adding New Item</string>
    <string name="add_confirm">Confirm</string>
    <string name="desc">userProfile</string>
    <string name="register_button">Register</string>
    <string name="title_activity_apams_register">Apams_register</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_register_confirm">Confirm</string>
    <string name="register">Apams Registration</string>
    <string name="acc_CID">CID</string>
    <string name="acc_priority">Priority</string>
    <string name="regis_owner">Are you the manager of the Assets?</string>
    <string name="regis_dataName">Name of your new asset database</string>
    <string name="regis_invite">Invitation Code</string>
    <string name="regis_lvl">Maximum level of administration</string>
    <string name="acc_addData">Create New Asset Database</string>
    <string name="acc_dataName">Name of database</string>
    <string name="acc_maxLvl">Max priority lvl of database</string>
    <string name="create_confirm">Confirm</string>
    <string name="acc_Database">Failed to load database</string>
    <string name="acc_getData">Get all database under management</string>
    <string name="acc_invite">Create invitation code</string>
    <string name="acc_manageInvite">Manage current invitation code</string>
    <string name="invite_choose">Choose the database of invitation code</string>
    <string name="invite_generate">Generate an invitation code</string>
    <string name="scan_activate">Scan Barcode</string>
    <string name="add_generateQR">Generate unique QR code for item</string>
    <string name="addBuilding">Item Building Name</string>
    <string name="invite_maxlvl">Max priority level of this database.</string>
    <string name="invite_shareinvite">Share this invite code.</string>
    <string name="title_invitationcode_list">Invitation codes</string>
    <string name="title_invitationcode_detail">Invitation code Detail</string>
    <string name="add_itemlvl">Item priority level</string>
    <string name="add_chooseData">Choose the database you want to add this item to</string>
    <string name="login_setip">Optional: Set server IP</string>
    <string name="login_findpw">Recover password</string>
    <string name="title_View">Asset Database</string>
    <string name="title_asset_list">Assets</string>
    <string name="title_asset_detail">Asset Detail</string>
    <string name="extra_empty">Empty Extra Information</string>

</resources>