<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/invite_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_choose"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="21sp" />

    <Spinner
        android:id="@+id/invite_dataspinner"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <Button
        android:id="@+id/invite_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_generate"
        android:onClick="generateCode" />

    <Button
        android:id="@+id/invite_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_confirm"
        android:onClick="confirmInvite" />

</LinearLayout>