<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apams.addNewActivity" >

    <ImageButton
        android:id="@+id/user_image"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:onClick="changeUserPic"
        android:scaleType="fitCenter"
        android:contentDescription="@string/desc" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:text="@string/acc_user"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_CID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/acc_CID"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_CID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/acc_priority"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>